@@ -1,4 +1,4 @@
-$NetBSD: README,v 1.3 2004/08/11 21:20:30 jlam Exp $
+$NetBSD: README,v 1.4 2004/08/13 04:38:02 jlam Exp $
 
  0 Introduction
  ==============
@@ -43,20 +43,12 @@ breakage seep in.  Proper methodology for updating this package is:
 *NOTE* the most recent libnbcompat.
 *NOTE*
 
-libnbcompat-20040809 has been tested to build and install correctly
+libnbcompat-20040813 has been tested to build and install correctly
 on the following operating systems:
 
 	FreeBSD-4.8/i386	<jlam@NetBSD.org>
-	FreeBSD-5.2.1/i386	<seb@NetBSD.org>
-	IRIX 6.5		<schmonz@NetBSD.org>
-	MacOS X 10.3.4		<schmonz@NetBSD.org>
-	MacOS X 10.3.5		<masahiro@wide.ad.jp>
+	MacOS X 10.2.8		<jlam@NetBSD.org>
 	NetBSD-1.6.2/i386	<jlam@NetBSD.org>
-	NetBSD-2.0_BETA/i386	<wiz@NetBSD.org>
-	OpenBSD-3.3/i386	<dmcmahill@NetBSD.org>
-	Red Hat Linux 8.0	<cube@NetBSD.org>
-	Solaris 8		<sketch@NetBSD.org>
-	Solaris 9		<sketch@NetBSD.org>
 
 
  3 Usage
